--- a/ACM2.Rmd
+++ b/ACM2.Rmd
@@ -25,42 +25,22 @@ depbfc <- c('21','25','39','58','70','71','89','90')#
 load("data/jeunesse/ACM_evo.RData")
 sparkline(0)
 
-ACMH <- function(data,lignes) {
-  tab <- data %>% 
-            rename(Code=1) %>%  
-            filter(Code %in% lignes) %>%
-            arrange(Code)
-
-tab %>%
-  filter(année==2021 ) %>%
-  select(-année) %>%
-  left_join(tab %>% 
-              group_by(Code) %>%
-              summarise(`séjours 2010-2021`=spk_chr(`Nombre de séjours`),
-                        `séjours >5j 2010-2021`=spk_chr(`dont séjours de cinq jours ou plus`),
-                        `mineurs 2010-2021`=spk_chr(`Effectifs de départs de mineurs`),
-                        `<6 ans 2010-2021`=spk_chr(`Moins de 6 ans`),
-                        `6-13 ans 2018-2021 (1)*`=spk_chr(`6-13 ans`[année>2017]),
-                        `14-17 ans 2018-2021`=spk_chr(`14-17 ans`[année>2017]),
-                        `handicap 2016-2021`=spk_chr(`Mineurs déclarés en situation de handicap`[année>2015]),
-                        `journées 2010-2021`=spk_chr(`Nombre de journées`),
-                        `journées enfants 2010-2021`=spk_chr(`Nombre de journées enfants`)
-                        ) ,
-            by="Code") %>%
-  cc_kable(aligne = "clrrrrrrrrr") %>%
-  add_header_above(c( " "=11,"évolutions"=9) ) %>%
-  footnote(general = "MENJS, DJEPVA, fichier SIAM ; traitement INJEP, MEDES", general_title = "Source : ",
-            footnote_as_chunk = T)  %>%
-  scroll_box(height = "500px")
+#crosstalk
+tabfiltre <- function(tab=tab) {
+ tab %>% datatable(escape = FALSE,
+                  extensions = c('Scroller', 'Buttons'),
+                  options = list(
+                    dom = 'Bfrtip',
+                    buttons = c('copy', 'csv', 'excel', 'pdf', 'print'),
+                    scrollX = TRUE),
+                  rownames = FALSE,
+                  caption = htmltools::tags$caption(
+    style = 'caption-side: bottom; text-align: center;',
+    'Source : ', htmltools::em('MENJS, DJEPVA, fichier SIAM ; traitement INJEP, MEDES')
+  )) %>% 
+  spk_add_deps() 
 }
 
-
-
-#ACMSH
-
-
-options(knitr.kable.NA = '')
-options(knitr.table.format = "html")
 ```
 
 
@@ -76,48 +56,286 @@ Les Accueils collectifs de mineurs avec hébergement regroupent les centres de v
 **1 100** séjours avec hébergement en BFC
 
 **(1) : Depuis le printemps 2017, les tranches d'âges 6-11 ans d'une part, 12-17 ans d'autre part ont été remplacées respectivement par les tranches d'âges 6-13 ans d'une part et 14-17 ans d'autre part par souci de cohérence avec la réglementation en vigueur au sein des accueils collectifs de mineurs.**
+
 ## Row {data-height="20"}
 
 ### Données régionales
 
 ## Row {.tabset .tabset-fade .tabset-pills data-height="500"}
 
-### Tableaux
+### Tableaux régionaux
 
 ```{r}
-tab <- ACMH_reg %>%
+
+ACMH <- ACMH_reg %>%
+  filter(année == 2021) %>%
   filter(REG %in% c(11:94,"Total France métropolitaine","Total France + Étranger") ) %>%
-  arrange(REG)
+  arrange(REG) %>%
+  select(-année)
 
-tab <- tab %>%
-  filter(année==2021 ) %>%
-  select(-année) %>%
-  left_join(tab %>% 
-              group_by(REG,séjour) %>%
-              summarise(`séjours 2010-2021`=spk_chr(`Nombre de séjours`),
-                        `séjours >5j 2010-2021`=spk_chr(`dont séjours de cinq jours ou plus`),
-                        `mineurs 2010-2021`=spk_chr(`Effectifs de départs de mineurs`),
-                        `<6 ans 2010-2021`=spk_chr(`Moins de 6 ans`),
-                        `6-13 ans 2018-2021 (1)*`=spk_chr(`6-13 ans`[année>2017]),
-                        `14-17 ans 2018-2021`=spk_chr(`14-17 ans`[année>2017]),
-                        `handicap 2016-2021`=spk_chr(`Mineurs déclarés en situation de handicap`[année>2015]),
-                        `journées 2010-2021`=spk_chr(`Nombre de journées`),
-                        `journées enfants 2010-2021`=spk_chr(`Nombre de journées enfants`)
-                        ) ,
-            by=c("REG","séjour") )
+tab <- SharedData$new(ACMH)
 
+filter_checkbox("sejour","Séjour",tab,group=~séjour,inline=TRUE, allLevels = FALSE)
+
+tab %>% tabfiltre()
+
+```
+
+### Evolutions 
+
+```{r}
+tab <- ACMH_reg %>% 
+  filter(REG %in% c(11:94,"Total France métropolitaine","Total France + Étranger") ) %>%
+  arrange(REG) %>%
+  group_by(REG,`séjour`) %>%
+  summarise(`séjours 2010-2021`=spk_chr(`Nombre de séjours`),
+            `séjours >5j 2010-2021`=spk_chr(`dont séjours de cinq jours ou plus`),
+            `mineurs 2010-2021`=spk_chr(`Effectifs de départs de mineurs`),
+            `<6 ans 2010-2021`=spk_chr(`Moins de 6 ans`),
+            `6-13 ans 2018-2021 (1)*`=spk_chr(`6-13 ans`[année>2017]),
+            `14-17 ans 2018-2021`=spk_chr(`14-17 ans`[année>2017]),
+            `handicap 2016-2021`=spk_chr(`Mineurs déclarés en situation de handicap`[année>2015]),
+            `journées 2010-2021`=spk_chr(`Nombre de journées`),
+            `journées enfants 2010-2021`=spk_chr(`Nombre de journées enfants`)
+  ) 
 tab <- SharedData$new(tab)
 
 filter_checkbox("sejour","Séjour",tab,group=~séjour,inline=TRUE, allLevels = FALSE)
 
-tab %>% datatable(escape = FALSE,
-                  extensions = c('Scroller', 'Buttons'),
-                  options = list(
-                    dom = 'Bfrtip',
-                    buttons = c('copy', 'csv', 'excel', 'pdf', 'print'),
-                    scrollX = TRUE),
-                  rownames = FALSE) %>% 
-  spk_add_deps() 
+tab %>% tabfiltre()
 
 ```
 
+
+### Comparaisons
+
+**9e** région de France en nombre de lieux d'accueils sans hébergement
+
+```{r}
+hw_grid(
+  
+  ACMH %>%
+    filter(séjour == "Ensemble des séjours") %>%
+    filter(!is.na(Destination)) %>%
+    arrange(desc(`Nombre de séjours`)) %>%
+    hchart("bar", 
+           hcaes(x=Destination,y= `Nombre de séjours`,
+                 color=ifelse(REG=="27","#6a5acd","#ffd700")   ),
+           showInLegend = F, pointWidth = 20,
+           name = "Ensemble des séjours avec hébergement" ) %>%
+    hc_xAxis(title=list(text="Régions")) %>%
+    hc_yAxis(title=list(text="Nombre de séjours")) %>%
+    hc_add_theme(thm) %>%
+    hc_exporting(enabled = TRUE, filename = "custom-file-name"),
+  
+  ACMH %>%
+    filter(séjour == "Ensemble des séjours") %>%
+    filter(!is.na(Destination)) %>%
+    arrange(desc(`Nombre de journées enfants`)) %>%
+    hchart("bar", 
+           hcaes(x=Destination,y= `Nombre de journées enfants`,
+                 color=ifelse(REG=="27","#6a5acd","#ffd700")   ),
+           showInLegend = F, pointWidth = 20,
+           name = "Nombre de journées enfants" ) %>%
+    hc_xAxis(title=list(text="Régions")) %>%
+    hc_yAxis(title=list(text="Nombre de journées enfants")) %>%
+    hc_add_theme(thm) %>%
+    hc_exporting(enabled = TRUE, filename = "custom-file-name"),
+  
+  ncol = 2)
+  
+```
+
+### Places ouvertes par séjour
+
+Une large majorité de séjours de vacances.
+
+```{r}
+ACMH %>%
+    filter(séjour != "Ensemble des séjours") %>%
+    filter(REG=='27') %>%
+    arrange(desc(`Nombre de journées enfants`)) %>%
+  hchart("pie",
+         hcaes(x=séjour,y=`Nombre de journées enfants`),
+         name="Bourgogne-Franche-Comté",
+         showInLegend = T, 
+          size='85%',
+          innerSize='75%', 
+          pointPlacement=0.2) %>%
+  hc_add_series(ACMH %>%
+                      filter(séjour != "Ensemble des séjours") %>%
+                      filter(REG=="Total France métropolitaine") %>%
+                      arrange(desc(`Nombre de journées enfants`)),
+                "pie",
+                hcaes(x=séjour,y=`Nombre de journées enfants`),
+                name="France métro",
+                size='50%',innerSize="50%",
+                  dataLabels=F, showInLegend = F,
+                  linkedTo=':previous') %>%
+  hc_credits(enabled=T,text="Source") %>%
+  hc_add_theme(thm) %>%
+  hc_exporting(enabled = TRUE, filename = "custom-file-name")
+
+
+```
+
+### Départs de mineurs par séjour
+
+Une large majorité de mineurs de 6 à 13 ans.
+
+```{r}
+tab <- ACMH %>%
+  select(1,2,6:8,12) %>%
+  pivot_longer(3:5,names_to = "age",values_to = "jeunes") %>%
+  arrange(desc(age))
+
+hw_grid(
+  
+  tab %>%
+    filter(séjour == "Ensemble des séjours") %>%
+    filter(REG=='27') %>% 
+    hchart("pie",
+           hcaes(x=age,y=jeunes),
+           name="Bourgogne-Franche-Comté",
+           showInLegend = T, dataLabels=F,
+           size='85%',
+           innerSize='75%', 
+           pointPlacement=0.2) %>%
+        #   dataLabels = list(enabled = TRUE,
+                           # format = "{point.age} : <b>{point.jeunes}</b>",
+                           # distance = -30,
+                           # padding = 0) ) %>%
+     hc_title(verticalAlign="top",
+              text = "BFC")  %>%
+    hc_add_series(tab %>%
+                    filter(séjour == "Ensemble des séjours") %>%
+                    filter(REG=='Total France métropolitaine') ,
+                  "pie",
+                  hcaes(x=age,y=jeunes),
+                  name="France métro",
+                  size='50%',innerSize="50%",
+                  dataLabels=F, showInLegend = F,
+                  linkedTo=':previous') %>%
+       hc_subtitle(verticalAlign="middle",
+                   text = "France",
+                   distance=-10) %>%
+    hc_add_theme(thm) %>%
+    hc_exporting(enabled = TRUE, filename = "custom-file-name"),
+  
+  tab %>%
+    filter(REG=='27') %>% 
+    hchart("bar",
+           hcaes(x=séjour,y=jeunes,group=age),
+           showInLegend = T, 
+           stacking="normal") %>%
+    hc_subtitle(text="Détail des séjours BFC") %>%
+    hc_add_theme(thm) %>%
+    hc_exporting(enabled = TRUE, filename = "custom-file-name"),
+  
+  ncol=2 )
+  
+```
+
+
+## Row {.tabset .tabset-fade .tabset-pills data-height="500"}
+
+### Tableaux départementaux
+
+```{r}
+
+ACMH <- ACMH_dep %>%
+  filter(année == 2021) %>%
+  filter(DEP %in% depbfc)  %>%
+  arrange(DEP) %>%
+  select(-année) 
+
+tab <- SharedData$new(ACMH)
+
+filter_checkbox("sejour","Séjour",tab,group=~séjour,inline=TRUE, allLevels = FALSE)
+
+tab %>% tabfiltre()
+
+```
+
+### Evolutions 
+
+```{r}
+tab <- ACMH_dep %>% 
+  filter(DEP %in% depbfc)  %>%
+  arrange(DEP) %>%
+  group_by(DEP,`séjour`) %>%
+  summarise(`séjours 2010-2021`=spk_chr(`Nombre de séjours`),
+            `séjours >5j 2010-2021`=spk_chr(`dont séjours de cinq jours ou plus`),
+            `mineurs 2010-2021`=spk_chr(`Effectifs de départs de mineurs`),
+            `<6 ans 2010-2021`=spk_chr(`Moins de 6 ans`),
+            `6-13 ans 2018-2021 (1)*`=spk_chr(`6-13 ans`[année>2017]),
+            `14-17 ans 2018-2021`=spk_chr(`14-17 ans`[année>2017]),
+            `handicap 2016-2021`=spk_chr(`Mineurs déclarés en situation de handicap`[année>2015]),
+            `journées 2010-2021`=spk_chr(`Nombre de journées`),
+            `journées enfants 2010-2021`=spk_chr(`Nombre de journées enfants`)
+  ) 
+tab <- SharedData$new(tab)
+
+filter_checkbox("sejour","Séjour",tab,group=~séjour,inline=TRUE, allLevels = FALSE)
+
+tab %>% tabfiltre()
+
+```
+
+
+### Comparaisons
+Des accueils avec hébergement plus nombreux dans le Jura et l’Yonne.
+
+```{r}
+hw_grid(
+  
+  ACMH %>%
+  #      arrange(desc(`Nombre de séjours`)) %>%
+    filter(séjour != "Ensemble des séjours") %>%
+    filter(!is.na(Destination)) %>%
+    hchart("bar", 
+           hcaes(x=Destination,y= `Nombre de séjours`,group=séjour),
+           showInLegend = TRUE, pointWidth = 20,
+           stacking="normal") %>%
+    hc_xAxis(title=list(text="Départements")) %>%
+    hc_yAxis(title=list(text="Nombre de séjours")) %>%
+    hc_add_theme(thm) %>%
+    hc_exporting(enabled = TRUE, filename = "custom-file-name"),
+  
+  ACMH %>%
+   #     arrange(desc(`Nombre de journées enfants`)) %>%
+    filter(séjour != "Ensemble des séjours") %>%
+    filter(!is.na(Destination)) %>%
+    hchart("bar", 
+           hcaes(x=Destination,y= `Nombre de journées enfants`,group=séjour),
+           showInLegend = TRUE, pointWidth = 20,
+           stacking="normal" ) %>%
+    hc_yAxis(title=list(text="Nombre de journées enfants")) %>%
+    hc_add_theme(thm) %>%
+    hc_exporting(enabled = TRUE, filename = "custom-file-name"),
+  
+  ncol = 2)
+  
+```
+
+
+### Départs de mineurs par séjour
+
+```{r}
+tab <- ACMH %>%
+  select(1,2,6:8,12) %>%
+  pivot_longer(3:5,names_to = "age",values_to = "jeunes") %>%
+  arrange(desc(age))
+
+tab %>%
+  filter(séjour =="Ensemble des séjours") %>%
+    hchart("bar",
+           hcaes(x=Destination,y=jeunes,group=age),
+           showInLegend = T, 
+           stacking="normal") %>%
+    hc_subtitle(text="Séjours par âge") %>%
+    hc_add_theme(thm) %>%
+    hc_exporting(enabled = TRUE, filename = "custom-file-name")
+  
+
+```
