--- a/0_about.Rmd
+++ b/0_about.Rmd
@@ -6,6 +6,7 @@ output: html_document
 ---
 ```{r setup, include=F ,echo=FALSE, cache=F}
 library(BAMMtools)
+library(paletteer)
 library(glue)
 library(HatchedPolygons)
 library(crosstalk)
